Bug 489445 - Edit Contents shortcut is missing from Klipper after upgrading to Plasma 6
Summary: Edit Contents shortcut is missing from Klipper after upgrading to Plasma 6
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Clipboard widget & pop-up (other bugs)
Version First Reported In: 6.1.1
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-06-29 16:33 UTC by shscs911
Modified: 2025-04-10 02:14 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments
Klipper_Plasma-5_vs_Plasma-6.1 (153.46 KB, image/png)
2024-06-29 16:33 UTC, shscs911
Details

Note You need to log in before you can comment on or make changes to this bug.
Description shscs911 2024-06-29 16:33:45 UTC
Created attachment 171184 [details]
Klipper_Plasma-5_vs_Plasma-6.1

SUMMARY
- "Edit Contents" shortcut is missing from Klipper after upgrading to Plasma 6.
- In Plasma 5, Edit Contents option was available in the Shortcuts Configuration, where we could assign a Global Shortcut like "Meta+C" to edit the current clipboard entry.
- This option is missing from Klipper's Shortcuts Configuration section in Klipper.
- Editing contents of clipboard entries from Klipper systray icon works as expected.

STEPS TO REPRODUCE
1.  Right-click Klipper from Taskbar Panel systray and select "Configure Clipboard"
2.  Select "Shortcuts" from the side-bar to open "Shortcuts Configuration" page

OBSERVED RESULT
"Edit Contents" option is missing from the "Shortcuts Configuration" page

EXPECTED RESULT
"Edit Contents" option should be configurable from "Shortcuts Configuration" page

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:
KDE Plasma Version: 6.1.1
KDE Frameworks Version: 6.3.0
Qt Version: 6.7.2

ADDITIONAL INFORMATION
Attaching screenshots of "Shortcuts Configuration" page from Plasma 5 and Plasma 6 for reference
Comment 2 Nate Graham 2025-01-16 17:44:36 UTC
Oops, looks like that got removed by accident.
Comment 3 Bug Janitor Service 2025-04-08 13:02:59 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5381
Comment 4 Fushan Wen 2025-04-10 02:14:57 UTC
Git commit 90b914635b23a3f8a2ab6445cfa8b2f6468a2f44 by Fushan Wen.
Committed on 10/04/2025 at 01:45.
Pushed by fusionfuture into branch 'master'.

klipper: bring back "Edit Contents" shortcut

"Edit Contents" shortcut is missing from Klipper after upgrading to Plasma 6.
FIXED-IN: 6.4.0

M  +9    -0    klipper/declarative/qml/KlipperPopup.qml
M  +7    -0    klipper/klipper.cpp
M  +1    -0    klipper/klipper.h
M  +8    -0    klipper/klipperpopup.cpp
M  +2    -0    klipper/klipperpopup.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/90b914635b23a3f8a2ab6445cfa8b2f6468a2f44