klipper: bring back "Edit Contents" shortcut

"Edit Contents" shortcut is missing from Klipper after upgrading to Plasma 6.

BUG: 489445
FIXED-IN: 6.4.0